# sqlfluff

./: AGENTS.md
.github/: codspeed-swept.json
.github/scripts/: codspeed_sweep_commit.py  codspeed_sweep_plan.py  list_commits.py  package_baseline.py  package_result.py  write_summary.py
.github/workflows/: benchmark-commit-range.yml  ci-tests.yml  codspeed-benchmarks.yml  codspeed-sweep.yml  perf-regression-sweep.yml
scripts/: bisect-history.ps1
sqlfluffrs/: AGENTS.md  Cargo.toml  ENGINE.md  PERF_LOG.md  sqlfluffrs.pyi
sqlfluffrs/benches/: parser_bench.rs
sqlfluffrs/sqlfluffrs_benchmarks/: Cargo.toml  build.rs
sqlfluffrs/sqlfluffrs_benchmarks/benches/: tpc_bench.rs
sqlfluffrs/sqlfluffrs_benchmarks/examples/: lex_bench.rs  min_repro.rs  time_tpc.rs
sqlfluffrs/sqlfluffrs_lexer/: Cargo.toml
sqlfluffrs/sqlfluffrs_lexer/src/: lexer.rs
sqlfluffrs/sqlfluffrs_parser/src/parser/: arena.rs  cache.rs  core.rs  frame.rs  helpers.rs  match_result.rs  python.rs  types.rs
sqlfluffrs/sqlfluffrs_parser/src/parser/table_driven/: anynumberof.rs  bracketed.rs  delimited.rs  frame.rs  iterative.rs  match_algorithms.rs  oneof.rs  ref_grammar.rs  sequence.rs
sqlfluffrs/sqlfluffrs_python/src/: token.rs
sqlfluffrs/sqlfluffrs_types/: Cargo.toml
sqlfluffrs/sqlfluffrs_types/src/: grammar_api.rs  grammar_inst.rs  identity.rs  lib.rs  matcher.rs  string.rs
sqlfluffrs/sqlfluffrs_types/src/token/: config.rs  construction.rs  fmt.rs  mod.rs  raw_string.rs
sqlfluffrs/src/: lib.rs  test_harness.rs
src/sqlfluff/core/config/: fluffconfig.py
src/sqlfluff/core/linter/: linter.py
src/sqlfluff/core/parser/: lexer.py  markers.py  rust_parser.py
src/sqlfluff/core/parser/segments/: base.py  keyword.py  raw.py
src/sqlfluff/core/templaters/: jinja.py
src/sqlfluff/dialects/: dialect_ansi_keywords.py  dialect_bigquery.py  dialect_clickhouse.py  dialect_databricks.py  dialect_db2.py  dialect_doris.py  dialect_exasol.py  dialect_flink.py  dialect_impala.py  dialect_mariadb.py  dialect_materialize.py  dialect_mysql.py  dialect_oracle.py  dialect_postgres.py  dialect_redshift.py  dialect_snowflake.py  dialect_sparksql.py  dialect_sqlite.py  dialect_starrocks.py  dialect_trino.py  dialect_tsql.py  dialect_vertica.py
test/: test_codspeed_tpc_parse.py
test/benchmarks/: __init__.py  conftest.py  tpc_test.py
test/core/parser/: lexer_test.py  rust_parser_test.py
test/core/parser/parity/: __init__.py  cases_test.py  compare.py  corpus_test.py  grammar_test.py  special_cases_test.py
test/fixtures/parity/: README.md  bracket_recovery.yml  codegen_integrity.yml  config_parity.yml  dangling_refs.yml  engine_ports.yml  error_messages.yml  invariants.yml  known_divergences.yml  lexer_cases.yml  native_edge_cases.yml  regressions.yml  templated.yml  unicode.yml
utils/: build_dialects.py  build_lexers.py  build_parsers.py
utils/parity_audit/: AUDIT_STATE.md  README.md  deep_compare.py  fuzz2_harness.py  fuzz_harness.py  invariant_fuzz.py  lexer_diff.py  pyrs_harness.py  regex_diff.py  table_check.py
