[package]
name = "sqlfluffrs"
# NOTE: Version uses Rust SemVer format (e.g., "4.0.0-alpha.1").
# Maturin automatically converts this to PEP 440 format for the Python package (e.g., "4.0.0a1").
# See: https://www.maturin.rs/metadata.html
version = "4.2.2"
edition = "2021"
rust-version.workspace = true
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlfluffrs"
crate-type = ["cdylib", "rlib"]
bench = false

[workspace]
members = [
    "sqlfluffrs_dialects",
    "sqlfluffrs_lexer",
    "sqlfluffrs_parser",
    "sqlfluffrs_rules",
    "sqlfluffrs_types",
    "sqlfluffrs_python",
    "sqlfluffrs_benchmarks",
]

[workspace.package]
version = "4.2.2"
rust-version = "1.96"

[workspace.dependencies]
env_logger = "0.11.9"
regex = { version = "1.12.3", features = ["perf"] }
regex-syntax = "0.8"
fancy-regex = "0.17.0"
hashbrown = "0.16.1"
itertools = "0.14.0"
log = "0.4.29"
smallvec = "1.15.1"
once_cell = "1.21.4"
bincode = "1.3.3"
# NOTE: Update the abi3 version as we deprecate old python versions.
# It should match the oldest currently supported python version.
pyo3 = { version = "0.29.0", features = [
    "abi3-py310",
    "hashbrown",
    "extension-module",
    "uuid",
] }
uuid = { version = "1.22.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
criterion = "0.8.2"

[features]
unicode = []
verbose-debug = ["sqlfluffrs_parser/verbose-debug"]
python = [
    "unicode",
    "pyo3",
    "mimalloc",
    "sqlfluffrs_lexer/python",
    "sqlfluffrs_parser/python",
    "sqlfluffrs_rules/python",
    "sqlfluffrs_python",
]

[dependencies]
env_logger.workspace = true
hashbrown.workspace = true
log.workspace = true
pyo3 = { workspace = true, optional = true }
serde_yaml_ng.workspace = true
# Global allocator for the extension module. The parser is allocation-heavy
# (per-frame Box<TableParseFrame> and Arc<MatchResult> churn dominate the DHAT
# profile); glibc malloc's _int_malloc/_int_free bin-management path is ~17% of
# all instructions on the TPC-DS parse benchmark, while mimalloc services those
# same fixed-size allocations from a segregated free-list in far fewer
# instructions. See PERF_LOG.md for the measurement. Optional + gated on the
# `python` feature so a plain `cargo build --workspace` (CI, unit tests) does
# not pull it; only the built extension installs the global allocator.
mimalloc = { version = "0.1", optional = true }
blake2 = "0.10.6"
sqlfluffrs_types = { path = "sqlfluffrs_types" }
sqlfluffrs_lexer = { path = "sqlfluffrs_lexer" }
sqlfluffrs_dialects = { path = "sqlfluffrs_dialects" }
sqlfluffrs_parser = { path = "sqlfluffrs_parser" }
sqlfluffrs_rules = { path = "sqlfluffrs_rules" }
sqlfluffrs_python = { path = "sqlfluffrs_python", optional = true }

[dev-dependencies]
env_logger.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
debug = true
strip = false

[profile.release]
debug = false
strip = true
# Full (fat) LTO + a single codegen unit let calls inline across the workspace
# crates (parser <-> types <-> lexer), which the hot parse loop crosses
# constantly (token accessors, grammar-table lookups). Measurably fewer
# instructions per parse at the cost of a slower release build.
lto = "fat"
codegen-units = 1
